updating for changes, squashed bugs

--- a/html/indexstyles.css
+++ b/html/indexstyles.css
@@ -7,22 +7,36 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
+    padding: 10px;
 }
 
 .column {
-    border: 40px;
+    border-style: solid;
+    border-width: 5px;
     border-color: black;
     background: #1B3B6F;
     padding: 5px;
-    width: 250px;
-    height: 300px;
+    width: 400px;
+    height: 550px;
     margin: 20px;
+    margin-bottom: 0px;
+}
 
-    line-height: 150px;
+.columnImageDiv {
+    width: 400px;
+    height: 400px;
+}
+
+.columnTextDiv {
+    line-height: 30px;
+    text-align: left;
+    padding: 5px;
+}
+
+.columnText {
     color: white;
     font-weight: bold;
-    font-size: 3em;
-    text-align: center;
+    font-size: 30px;
 }
 
 .pageBody {
@@ -174,5 +188,34 @@ body {
 }
 
 #login-popup .container .login-popup-btn:hover, .login-button:hover {
+    opacity: 1;
+}
+
+#account-popup {
+    height: auto;
+    display: none;
+    position: fixed;
+    border: 3px solid gray;
+    z-index: 3;
+}
+
+#account-popup .account-container {
+    max-width: 150px;
+    padding: 15px;
+    background-color: white;
+}
+
+.account-popup-btn {
+    background-color: black;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 10px;
+    opacity: 0.8;
+}
+
+#account-popup .account-container .account-popup-btn:hover {
     opacity: 1;
 }
